Fix typo, cosmetics

--- a/training/notebook/project/project-management.ipynb
+++ b/training/notebook/project/project-management.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:68f989a429dfd3f8892fc7ddac96dac51a39418dd6b64c30198376bc77cf13ce"
+  "signature": "sha256:f38706ee33373153f23c3c1f8b79424f643c3367c6273ba69e2cf65563e2b4a9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -217,7 +217,7 @@
      "level": 4,
      "metadata": {},
      "source": [
-      "When to use it ?"
+      "When to use it?"
      ]
     },
     {
@@ -298,7 +298,7 @@
      "level": 4,
      "metadata": {},
      "source": [
-      "When to use it ?"
+      "When to use it?"
      ]
     },
     {
@@ -423,38 +423,105 @@
      ]
     },
     {
+     "cell_type": "heading",
+     "level": 5,
+     "metadata": {},
+     "source": [
+      "Feedback"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Feedback:\n",
       "- Pair programming\n",
       "- Planning game \n",
       "    - Tutorial: for each group, 1 criterion, 10 countries\n",
       "- Test-driven development\n",
-      "- Whole team at one place, customer and developers\n",
-      "\n",
-      "Continuous process:\n",
+      "- Whole team at one place, customer and developers"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 5,
+     "metadata": {},
+     "source": [
+      "Continuous process"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "- Continuous integration\n",
       "- Refactoring or design improvement\n",
-      "- Small releases\n",
-      "\n",
-      "Shared understanding:\n",
+      "- Small releases"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 5,
+     "metadata": {},
+     "source": [
+      "Shared understanding"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "- Coding standards\n",
       "- Collective code ownership\n",
       "- Simple design\n",
-      "- System metaphor (a shared language)\n",
-      "\n",
-      "Programmer welfare:\n",
-      "- Sustainable pace\n",
-      "\n",
-      "Coding:\n",
+      "- System metaphor (a shared language)"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 5,
+     "metadata": {},
+     "source": [
+      "Programmer welfare"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "- Sustainable pace"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 5,
+     "metadata": {},
+     "source": [
+      "Coding"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "- The customer is always available\n",
       "- Code the unit test first\n",
       "- Only one pair integrates code at a time\n",
       "- Leave optimization until last\n",
-      "- No overtime\n",
-      "\n",
-      "Testing:\n",
+      "- No overtime"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 5,
+     "metadata": {},
+     "source": [
+      "Testing"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "- All code must have unit tests\n",
       "- All code must pass all unit tests before it can be released.\n",
       "- When a bug is found tests are created before the bug is addressed (a bug is not an error in logic, it is a test that was not written)\n",
@@ -477,11 +544,17 @@
      ]
     },
     {
+     "cell_type": "heading",
+     "level": 4,
+     "metadata": {},
+     "source": [
+      "Scrum's roles"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "What are the Scrum roles ?\n",
-      "\n",
       "- a **product owner** that represents the customer and is the *stakeholder of the product* (for the end users),\n",
       "- a **Scrum master** that is the *stakeholder of the process* (daily scrum),\n",
       "- a **development team** composed by *self-managed* software developers, software testers"
@@ -528,7 +601,7 @@
      "level": 4,
      "metadata": {},
      "source": [
-      "When to use it ?"
+      "When to use it?"
      ]
     },
     {
