Fix typo, cosmetics

--- a/training/notebook/project/project-management.ipynb
+++ b/training/notebook/project/project-management.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f38706ee33373153f23c3c1f8b79424f643c3367c6273ba69e2cf65563e2b4a9"
+  "signature": "sha256:461ceb1bd042b0fe469ef89de51ce89de9d0f945e7075f8066e6f8ff0bb89fbb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -29,11 +29,11 @@
      "metadata": {},
      "source": [
       "A project is:\n",
-      "- a set of activites: development,\n",
-      "- to achieve a **goal**: deliver some features,\n",
-      "- while managing constraints : \n",
-      "    - **time** \n",
-      "    - and **workers** (seen as a cost)."
+      "- A set of activites: development,\n",
+      "- To achieve a **goal**: deliver some features,\n",
+      "- While managing constraints : \n",
+      "    - **Time** \n",
+      "    - **Workers** (seen as a cost)."
      ]
     },
     {
@@ -48,8 +48,8 @@
      "metadata": {},
      "source": [
       "For further information, see:\n",
-      "- the project management triangle: *schedule (time) - scope - cost*\n",
-      "- and the project diamond model: *time - quality - scope - cost*.\n",
+      "- The project management triangle: *schedule (time) - scope (goal) - cost*,\n",
+      "- The project diamond model: *time - quality - scope (goal) - cost*.\n",
       "\n",
       "| Triangle      | Diamond      |\n",
       "| - |-|\n",
@@ -76,11 +76,11 @@
      "metadata": {},
      "source": [
       "To know **who does what**, you have to define the roles on the project:\n",
-      "- a potential customer,\n",
-      "- a project manager,\n",
-      "- software developers,\n",
-      "- software testers,\n",
-      "- end users."
+      "- A potential customer,\n",
+      "- A project manager,\n",
+      "- Software developers,\n",
+      "- Software testers,\n",
+      "- End users."
      ]
     },
     {
@@ -88,10 +88,10 @@
      "metadata": {},
      "source": [
       "You may define the responsibilities in a RACI document: an assignment matrix that declares for each key task\n",
-      "- who is **Responsible** ie. the one who does the work,\n",
-      "- who is the **Approver** ie. the one that takes the decisions,\n",
-      "- who can be **Consulted** ie. the one to be consulted before taking a decision,\n",
-      "- who needs to be **Informed** ie. the one to be informed that a decision has been taken.\n",
+      "- Who is **Responsible** ie. the one who does the work,\n",
+      "- Who is the **Approver** ie. the one that takes the decisions,\n",
+      "- Who can be **Consulted** ie. the one to be consulted before taking a decision,\n",
+      "- Who needs to be **Informed** ie. the one to be informed that a decision has been taken.\n",
       "\n",
       ">A Guide to the Project Management Body of Knowledge: PMBOK "
      ]
@@ -123,10 +123,10 @@
      "metadata": {},
      "source": [
       "Some well-known development models:\n",
-      "  - code and fix,\n",
-      "  - waterfall model,\n",
+      "  - Code and fix,\n",
+      "  - Waterfall model,\n",
       "  - V model: *an improved waterfall model*,\n",
-      "  - agile model: *a cooperative and experimental model, eventually incremental*."
+      "  - Agile model: *a cooperative and experimental model, eventually incremental*."
      ]
     },
     {
@@ -134,8 +134,8 @@
      "metadata": {},
      "source": [
       " You will **choose a method depending on some parameters**, eg.:\n",
-      " - *fixed features* + *a lot of stakeholder* => **a V model**\n",
-      " - a development team composed by *less than around then people* + a time box *less than two years* => **an agile approach**"
+      " - *Fixed features* + *a lot of stakeholder* => **a V model**\n",
+      " - A development team composed by *less than around then people* + a time box *less than two years* => **an agile approach**"
      ]
     },
     {
@@ -390,10 +390,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- a customer that relates **user stories** (how he wants to use the system),\n",
-      "- a project manager that can be a **tracker** (stand up meetings) and a **coach** (technical support),\n",
-      "- software developers,\n",
-      "- software testers."
+      "- A customer that relates **user stories** (how he wants to use the system),\n",
+      "- A project manager that can be a **tracker** (stand up meetings) and a **coach** (technical support),\n",
+      "- Software developers,\n",
+      "- Software testers."
      ]
     },
     {
