Move build tutorial to buil directory

--- a/training/notebook/project/project-management.ipynb
+++ b/training/notebook/project/project-management.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:461ceb1bd042b0fe469ef89de51ce89de9d0f945e7075f8066e6f8ff0bb89fbb"
+  "signature": "sha256:f6d14ffa51f3b2ea1f848b9e7e8247d73998b8d0f383bc3f1cab2db0ca2a4a67"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -555,9 +555,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- a **product owner** that represents the customer and is the *stakeholder of the product* (for the end users),\n",
-      "- a **Scrum master** that is the *stakeholder of the process* (daily scrum),\n",
-      "- a **development team** composed by *self-managed* software developers, software testers"
+      "- A **product owner** that represents the customer and is the *stakeholder of the product* (for the end users),\n",
+      "- A **Scrum master** that is the *stakeholder of the process* (daily scrum),\n",
+      "- A **development team** composed by *self-managed* software developers, software testers"
      ]
     },
     {
