--- a/training/notebook/tracker/tracker.ipynb
+++ b/training/notebook/tracker/tracker.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a4ba91eca7552019341c44ec6f3e4247d622125fc37863c53e9f29e60d17d69d"
+  "signature": "sha256:7d0a53382f228c5d078ab2fe78c108ff4630c8766ebe3c9d9444036cdc886ce0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -96,78 +96,92 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The issues list divides between opened issues and closed issues.  Issues appear in the issues lists with\n",
+      "The issues list is divided into **opened issues and closed issues**. Issues appear in the issues lists with:\n",
       "- their title,\n",
       "- their subset of *labels*,\n",
-      "- who submitted them, and\n",
-      "- how long they have been submitted.\n",
+      "- who submitted them,\n",
+      "- and how long they have been submitted.\n",
       "\n",
-      "The subset of labels is taken from a set defined on the project level (_Labels_ tab).  The set of labels and their semantics is up to the project policy.\n",
+      "The **subset of labels** is taken from a set defined on the project level (_Labels_ tab). The set of labels and their semantics is up to the project policy.\n",
       "\n",
-      "The description that accompanies an issue should explain how to **reproduce** it and what is expected.  If the description is not enough to reproduce the issue, the discussion feed that follows the issue should guide the submitter to elaborate that.\n",
+      "*The description that accompanies an issue* should explain how to **reproduce** it and what is expected. If the description is not enough to reproduce the issue, *the discussion feed* that follows the issue should guide the submitter to elaborate that.\n",
       "\n",
-      "Solving an issue is usually done in a specific branch or fork: when closing an issue, this issue can be associated to the pull request that fixes it."
+      "**Solving an issue is usually done in a specific branch or fork:** when closing an issue, this issue can be associated to the pull request that fixes it."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Reproducibility"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Reproducibility\n",
-      "---------------\n",
+      "*In the case of a bug*, the submitter of an issue should **describe how to reproduce the issue**.\n",
       "\n",
-      "In the case of a bug, the submitter of an issue should describe how to reproduce the issue.\n",
+      "It will usually take the form of a sequence of operations that leads from the start of the program to the rise of the bug. The bug may be always reproducible or randomly reproducible, either frequently or sparsely: the reproducibility frequency should be described as well.\n",
       "\n",
-      "It will usually take the form of a sequence of operations that leads from the start of the program to the rise of the bug.  The bug may be always reproducible or randomly reproducible, either frequently or sparsely: the reproducibility frequency should be described as well.\n",
+      "The submitter should **isolate the bug** before submitting it, by finding a reasonably short sequence that reproduces it. In other words, the user should **give a minimal complete example** that enables the developer to reproduce the bug. \n",
+      "- Complete in the sense that the described steps are enough to reproduce the bug. \n",
+      "- Minimal in the sense that there is no step that can be removed from the sequence while the bug still stands (locally minimal).\n",
       "\n",
-      "The submitter should _isolate_ the bug before submitting it, by finding a reasonably short sequence that reproduces it.  In other words, the user should give a _minimal complete example_ that enables the developer to reproduce the bug.  Complete in the sense that the described steps are enough to reproduce the bug.  Minimal in the sense that there is no step that can be removed from the sequence while the bug still stands (locally minimal).\n",
+      "*In the particular case of a bug relatively to a particular input* (typically for a software that takes an input file in parameter), this input should be short as well, complete and minimal in the sense that shortening it will make the bug disappear.\n",
       "\n",
-      "In the particular case of a bug relatively to a particular input (typically for a software that takes an input file in parameter), this input file should be short as well, complete and minimal in the sense that shortening it will make the bug disappear.\n",
-      "\n",
-      "If it is relevant, the submitter should specify the version of the software where this bug occurs (typically, for a regression, that is to say for a bug that did not exist in a previous version and that appeared in newer versions) and may have to describe the environment in which the bug occurs (operating system, versions of libraries...)."
+      "If it is relevant, the submitter should **specify the version of the software where this bug occurs** (typically, for a regression, that is to say for a bug that did not exist in a previous version and that appeared in newer versions) and may have to describe the environment in which the bug occurs (operating system, versions of libraries...)."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Labels and issue sorting"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Labels and issue sorting\n",
-      "------------------------\n",
+      "In most projects, issues are sorted through a multidimensional label systems. Some issue trackers like Bugzilla or Mantis have built-in label dimensions for typical developer concerns relatively to an issue:\n",
+      "- **kind of issue**: feature request or bug report,\n",
+      "- **severity**: critical, high, medium, low.\n",
       "\n",
-      "In most projects, issues are sorted through a multidimensional label systems.  Some issue trackers like Bugzilla or Mantis have built-in label dimensions for typical developer concerns relatively to an issue.\n",
-      "- *kind of issue*: feature request or bug report\n",
-      "- *severity*: critical, high, medium, low\n",
-      "\n",
-      "GitHub label system allows users to define the points in each dimension as labels, and then each issue will pick a point in each dimension to form its label subset (for example, `{feature request,medium}`)."
+      "> GitHub label system allows users to define the points in each dimension as labels, and then each issue will pick a point in each dimension to form its label subset (for example, `{feature request, medium}`)."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Timeline"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Timeline\n",
-      "--------\n",
-      "\n",
-      "Milestones can be associated to issues to specify that they should be solved before a certain point in the project development path."
+      "Milestones can be associated to issues to specify that **they should be solved before a certain point** in the project development path."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Issues and pull requests"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Issues and pull requests\n",
-      "------------------------\n",
-      "\n",
-      "Pull requests can be associated to issues."
+      "Pull requests can often be **associated** to issues."
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
