Add xkcd sketches

--- a/training/notebook/conv/coding-style.ipynb
+++ b/training/notebook/conv/coding-style.ipynb
@@ -1,13 +1,28 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5355bb61dfb6cf1408900547ba3086c04c61de208d8c6e4d8d70ad9bbd5789ae"
+  "signature": "sha256:943f9a7266a76a70a5b19451ca7ba79af3e0c6cafbdc16896eb4d80733654af0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Coding style"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<img src=\"images/goto.png\">"
+     ]
+    },
     {
      "cell_type": "code",
      "collapsed": false,
