--- a/training/notebook/tracker/tracker.ipynb
+++ b/training/notebook/tracker/tracker.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7d0a53382f228c5d078ab2fe78c108ff4630c8766ebe3c9d9444036cdc886ce0"
+  "signature": "sha256:6fb06aeb380473d72a6d4bec2e0c73847e2540d00a851a8038b1483c398c126f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -14,6 +14,13 @@
      "metadata": {},
      "source": [
       "Issue tracker"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<img src=\"images/cnr.png\">"
      ]
     },
     {
