--- a/training/notebook/vers/git.ipynb
+++ b/training/notebook/vers/git.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a5eb68ef1f7934c75123d6df77f1a7cb8f96b3e278b8efab2a30c44a79b0acaa"
+  "signature": "sha256:f00aa1899dcf6674e8badc4aeede757e3bacd5a7dedba2dce694c28196b92f26"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,7 +13,14 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Introduction"
+      "Version control"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<img src=\"images/git_commit.png\">"
      ]
     },
     {
