--- a/training/notebook/project/project-management.ipynb
+++ b/training/notebook/project/project-management.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f6d14ffa51f3b2ea1f848b9e7e8247d73998b8d0f383bc3f1cab2db0ca2a4a67"
+  "signature": "sha256:f078eb6faaaec34cadde03ce42bbbc4c68aad06ea6c84328c9ea58e04a84c724"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -14,6 +14,13 @@
      "metadata": {},
      "source": [
       "Project management"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<img src=\"images/time_management.png\">"
      ]
     },
     {
