--- a/training/notebook/software-development-tools.ipynb
+++ b/training/notebook/software-development-tools.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:664d18316c14c5d4589e7fc7f5760037204c878021d7e8b507a8a3838b0a59d1"
+  "signature": "sha256:9271136b659dc9edf09e4c0f87bf2c35b5947e63b66567253bf1b2c3e3231272"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,6 +28,24 @@
      "level": 2,
      "metadata": {},
      "source": [
+      "INRIA Paris-Rocquencourt SED (development team)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "- C\u00e9dric Doucet\n",
+      "- David Froger\n",
+      "- Thierry Martinez\n",
+      "- C\u00e9cile Stentzel"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
       "Monday, November 24th 2014"
      ]
     },
@@ -43,10 +61,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- Training: **version control**,\n",
+      "- Training: **version control** - David Froger,\n",
       "    - Break: 20 minutes,\n",
-      "- Training: **build management**,\n",
-      "- *Tutorial:* version control and build management."
+      "- Training: **build management** - Thierry Martinez,\n",
+      "- *Tutorial:* version control and build management - David Froger, and Thierry Martinez."
      ]
     },
     {
@@ -61,10 +79,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- *Tutorial:* version control and build management,\n",
-      "- Training and *tutorial:* **project management**,\n",
+      "- *Tutorial:* version control and build management - David Froger, and Thierry Martinez,\n",
+      "- Training and *tutorial:* **project management** - C\u00e9cile Stentzel,\n",
       "    - Break: 30 minutes,\n",
-      "- Training and *tutorial:* **issue tracker**,"
+      "- Training and *tutorial:* **issue tracker** - Thierry Martinez, and C\u00e9cile Stentzel,"
      ]
     },
     {
@@ -87,9 +105,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- Training: **continuous integration**,\n",
+      "- Training: **continuous integration** - David Froger, and C\u00e9dric Doucet,\n",
       "    - Break: 20 minutes,\n",
-      "- *Tutorial:* continuous integration."
+      "- *Tutorial:* continuous integration - David Froger, and C\u00e9dric Doucet."
      ]
     },
     {
@@ -104,9 +122,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- Training: **unit testing**,\n",
+      "- Training: **unit testing** - Thierry Martinez, and C\u00e9cile Stentzel,\n",
       "    - Break: 30 minutes,\n",
-      "- *Tutorial:* unit testing."
+      "- *Tutorial:* unit testing - Thierry Martinez, and all the others."
      ]
     },
     {
@@ -129,10 +147,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- Training: **coding style**,\n",
-      "- *Tutorial:* project management,\n",
+      "- Training: **coding style** - C\u00e9dric Doucet,\n",
+      "- *Tutorial:* project management - C\u00e9cile Stentzel, and C\u00e9dric Doucet,\n",
       "    - Break: 20 minutes,\n",
-      "- *Tutorial:* coding style,"
+      "- *Tutorial:* coding style - C\u00e9dric Doucet, and David Froger."
      ]
     },
     {
@@ -147,10 +165,18 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- *Tutorial:* project management and unit testing,\n",
+      "- *Tutorial:* project management and unit testing - Thierry Martinez, and C\u00e9cile Stentzel,\n",
       "    - Break: 30 minutes,\n",
-      "- *Tutorial:* version control."
+      "- *Tutorial:* version control - David Froger."
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
